--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate tag name
-        uses: MiguelRipoll23/generate-tag-name@1.0.0
+        uses: MiguelRipoll23/generate-tag-name@v1.0.0
         id: generate-tag-name
         with:
           channel: ${{ inputs.channel }}
