Improve workflow dispatch inputs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       channel:
-        required: true
+        default: stable
         description: Pick channel
         type: choice
         options:
