--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Generate tag name
         uses: ./
         id: generate-tag-name
+        with:
+          channel: ${{ inputs.channel }}
 
       - name: Log generated tag name
         run: echo ${{ steps.generate-tag-name.outputs.tag-name }}
