--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -34,6 +34,9 @@ jobs:
         id: generate-tag-name
         with:
           channel: ${{ inputs.channel }}
+          major-labels: breaking-change
+          minor-labels: feature,enhancement
+          patch-labels: bugfix
 
       - name: Update version name
         uses: reedyuk/npm-version@1.1.1
@@ -47,4 +50,4 @@ jobs:
           commit-message: ${{ steps.generate-tag-name.outputs.tag-name }}
           title: Bump version to ${{ steps.generate-tag-name.outputs.tag-name }}
           body: Automated pull request triggered by a new version update.
-          labels: ignore-for-release
+          labels: new-release,ignore-for-release
