--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc && prettier --write . && eslint src/**/*.ts",
-    "test": "git branch -f test main && git checkout test && npm run package",
-    "package": "ncc build --source-map --license licenses.txt && git add dist/ -f && git commit -a && git push"
+    "test": "git branch -f test && git checkout test && npm run package",
+    "package": "ncc build --source-map --license licenses.txt && git add dist/ -f"
   },
   "repository": {
     "type": "git",
