--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-tag-name",
-  "version": "1.5.1",
+  "version": "v1.6.0",
   "description": "Generate tag names with the help of semantic versioning and pull requests labels.",
   "main": "lib/main.js",
   "scripts": {
