--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -1,4 +1,4 @@
-name: Update version
+name: Create version
 
 on:
   workflow_dispatch:
@@ -30,13 +30,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate tag name
-        uses: MiguelRipoll23/generate-tag-name@vv1.6.0
+        uses: MiguelRipoll23/generate-tag-name@v1.7.0
         id: generate-tag-name
         with:
           channel: ${{ inputs.channel }}
-          major-labels: breaking-change
-          minor-labels: feature,enhancement
-          patch-labels: bugfix
 
       - name: Update version name
         uses: reedyuk/npm-version@1.2.1
