--- a/.github/release.yml
+++ b/.github/release.yml
@@ -31,6 +31,6 @@ changelog:
       labels:
         - dependencies
 
-    - title: 🪄 Other Changes
+    - title: 🛠️ Other Changes
       labels:
         - "*"
