--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -30,18 +30,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate tag
-        uses: MiguelRipoll23/generate-tag-name@v1.8.0
+        uses: MiguelRipoll23/generate-tag-name@main
         id: generate-tag-name
         with:
           channel: ${{ inputs.channel }}
 
       - name: Update version
-        uses: reedyuk/npm-version@1.2.1
+        uses: reedyuk/npm-version@master
         with:
           version: ${{ steps.generate-tag-name.outputs.tag-name }}
 
       - name: Create pull request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@main
         with:
           branch: version/${{ steps.generate-tag-name.outputs.tag-name }}
           commit-message: ${{ steps.generate-tag-name.outputs.tag-name }}
