--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -23,10 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set Node.js 18.x
+      - name: Setup node
         uses: actions/setup-node@v3.8.1
-        with:
-          node-version: 18.x
 
       - name: Install dependencies
         run: npm ci
