--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -30,22 +30,22 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate tag
-        uses: MiguelRipoll23/generate-tag-name@main
-        id: generate-tag-name
+        uses: MiguelRipoll23/create-tag-name@main
+        id: create-tag-name
         with:
           channel: ${{ inputs.channel }}
 
       - name: Update version
         uses: reedyuk/npm-version@master
         with:
-          version: ${{ steps.generate-tag-name.outputs.tag-name }}
+          version: ${{ steps.create-tag-name.outputs.tag-name }}
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@main
         with:
-          branch: version/${{ steps.generate-tag-name.outputs.tag-name }}
-          commit-message: ${{ steps.generate-tag-name.outputs.tag-name }}
-          title: Bump version to ${{ steps.generate-tag-name.outputs.tag-name }}
+          branch: version/${{ steps.create-tag-name.outputs.tag-name }}
+          commit-message: ${{ steps.create-tag-name.outputs.tag-name }}
+          title: Bump version to ${{ steps.create-tag-name.outputs.tag-name }}
           body: Automated pull request triggered by a new release.
           labels: new-release,ignore-for-release
           draft: true
