--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v4
 
-      - name: Generate tag
+      - name: Cretate tag name
         uses: ./
         id: create-tag-name
         with:
