--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
 
-      - name: Create tag
+      - name: Create tag name
         uses: MiguelRipoll23/create-tag-name@main
         id: create-tag-name
         with:
