--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -29,16 +29,18 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v4
 
-      - name: Cretate tag name
+      - name: Setup node
+        uses: actions/setup-node@v4.0.1
+
+      - name: Create tag name
         uses: ./
         id: create-tag-name
         with:
           channel: ${{ inputs.channel }}
 
       - name: Update version
-        uses: reedyuk/npm-version@1.2.2
-        with:
-          version: ${{ steps.create-tag-name.outputs.tag-name }}
+        run: |
+          npm version --no-git-tag-version ${{ steps.create-tag-name.outputs.tag-name }}
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v6
