--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,23 +15,30 @@ jobs:
   create-tag:
     name: Create tag
     runs-on: ubuntu-latest
+
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'new-release')
+
     outputs:
-      tag-name: ${{ steps.prepare-tag.outputs.tag-name }}
+      tag-name: ${{ steps.get-tag-name.outputs.tag-name }}
+
     steps:
-      - name: Parse tag
-        id: prepare-tag
+      - name: Checkout branch
+        uses: actions/checkout@v4
+
+      - name: Get tag name
+        id: get-tag-name
         run: |
           branch_name="${{ github.event.pull_request.head.ref }}"
           tag_name=$(echo $branch_name | sed 's/version\///')
           echo "tag-name=$tag_name" >> $GITHUB_OUTPUT
 
-      - name: Checkout branch
-        uses: actions/checkout@v4
-
       - name: Create tag
         run: |
-          git tag "${{ steps.prepare-tag.outputs.tag-name }}"
+          git tag "${{ env.TAG_NAME }}"
+        env:
+          TAG_NAME: ${{ steps.get-tag-name.outputs.tag-name }}
 
       - name: Push tag to origin
-        run: git push origin "${{ steps.prepare-tag.outputs.tag-name }}"
+        run: git push origin "${{ env.TAG_NAME }}"
+        env:
+          TAG_NAME: ${{ steps.get-tag-name.outputs.tag-name }}
