--- a/.github/release.yml
+++ b/.github/release.yml
@@ -18,7 +18,7 @@ changelog:
       labels:
         - feature
 
-    - title: 💅 Enhancements
+    - title: ✨ Enhancements
       labels:
         - enhancement
 
