--- a/examples/nodejs.yml
+++ b/examples/nodejs.yml
@@ -27,21 +27,25 @@ jobs:
 
     steps:
       - name: Checkout branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v4.0.1
 
       - name: Create tag name
-        uses: MiguelRipoll23/create-tag-name@main
+        uses: MiguelRipoll23/create-tag-name@v2.1.1
         id: create-tag-name
         with:
           channel: ${{ inputs.channel }}
 
       - name: Update version
-        uses: reedyuk/npm-version@master
-        with:
-          version: ${{ steps.create-tag-name.outputs.tag-name }}
+        run: |
+          npm version --no-git-tag-version ${{ env.TAG_NAME }}
+        env:
+          TAG_NAME: ${{ steps.create-tag-name.outputs.tag-name }}
 
       - name: Create pull request
-        uses: peter-evans/create-pull-request@main
+        uses: peter-evans/create-pull-request@v6
         with:
           branch: version/${{ steps.create-tag-name.outputs.tag-name }}
           commit-message: ${{ steps.create-tag-name.outputs.tag-name }}
